# videoplayer

./: CMakeLists.txt  QT6_MIGRATION_NOTES.md  QT6_MIGRATION_SUMMARY.md
debian/: control  rules
qml/: Actions.qml  Footer.qml  HProgressBar.qml  MpvVideo.qml  PlayList.qml  PlayListItem.qml  main.qml  main.qml.bak2
src/: application.cpp  main.cpp  mpvobject.cpp
src/mpris2/: mediaplayer2player.h
translations/: zh_CN.ts
